# spot-tty

./: .env  Cargo.toml  architecture.md  install.sh  readme.md
src/: main.rs
src/app/: app.rs  events.rs  reducer.rs  state.rs
src/config/: settings.rs
src/services/: auth.rs  mod.rs  spotify.rs
src/ui/: cover.rs  explorer.rs  mod.rs  player.rs  profile.rs  search.rs  sidebar.rs  status.rs  trackmenu.rs
